2004-12-31  Davyd Madeley  <davyd@madeley.id.au>

	* src/yelp-info-parser.c (add):
	* src/yelp-info-parser.h (add):
	* src/yelp-info-pager.c: Start of GNU Info support
	* src/Makefile.am: Compile added files

2004-12-31  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	* src/yelp-info-pager.c:
	* src/yelp-info-pager.h:
	* src/yelp-window.c:
	- Adding yelp-info-pager.[ch]

	* src/yelp-man-pager.c:
	- Some cleanups

	* stylesheets/Makefile.am:
	* stylesheets/info2html.xsl:
	- Adding info2html.xsl

	* stylesheets/db2html.xsl.in:
	* stylesheets/man2html.xsl:
	- Minor stylistic stuff

2004-12-31  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-toc-pager.c:
	- Put in a NULL check to fix a crahser for Davyd

2004-12-29  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-settings.c:
	* src/yelp-settings.h:
	* stylesheets/db2html.xsl.in:
	- Themed rule color for alternating rows in a table

2004-12-29  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/db2html.xsl.in:
	- Change chunk behavior to new gnome-doc-utils behavior
	- Various color and style things that I managed not to commit

	* stylesheets/toc2html.xsl:
	- Formatting improvements

2004-12-27  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	* src/yelp-settings.c:
	* src/yelp-settings.h:
	* src/yelp-toc-pager.c:
	- Added yelp_settings_params to set icon and color params
	- Added colors selected[0-3] and base[0-3]

	* src/yelp-html-gecko.c:
	* stylesheets/man2html.xsl:
	* stylesheets/toc2html.xsl:
	- Switched to XHTML

2004-12-22  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-bookmarks.c:
	- Put the comment write after the attribute writes

2004-12-22  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-bookmarks.c:
	* src/yelp-bookmarks.h:
	* src/yelp-window.c:
	- More bookmarks work from Don Scorgie

2004-12-22  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-base.c:
	* src/yelp-db-pager.c:
	* src/yelp-toc-pager.c:
	* src/yelp-utils.c:
	* src/yelp-utils.h:
	* src/yelp-window.c:
	* src/yelp-window.h: