@@ -1,3 +1,13 @@
+2004-12-31  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-db-pager.c:
+	* src/yelp-pager.h:
+	* src/yelp-window.c:
+	- Added an enum for document outline columns
+
+	* stylesheets/toc2html.xsl:
+	- Some CSS work
+
 2004-12-31  Davyd Madeley  <davyd@madeley.id.au>
 
 	* src/yelp-info-parser.c (add):
